test/corpus/regression.txt
=============|||
Operators with Colon Prefixes & Jlists (GH87)
=============|||

---- MODULE Test ----
op ==
  /\ A :> B
  /\ A := B
  /\ A ::= B
  /\ A :: B
  /\ A
====

--------------|||

(source_file (module (header_line) (identifier) (header_line)
  (operator_definition (identifier) (def_eq)
    (conj_list
      (conj_item (bullet_conj)
        (bound_infix_op (identifier_ref) (map_to) (identifier_ref))
      )
      (conj_item (bullet_conj)
        (bound_infix_op (identifier_ref) (assign) (identifier_ref))
      )
      (conj_item (bullet_conj)
        (bound_infix_op (identifier_ref) (bnf_rule) (identifier_ref))
      )
      (conj_item (bullet_conj)
        (label (identifier) (label_as) (identifier_ref))
      )
      (conj_item (bullet_conj) (identifier_ref))
    )
  )
(double_line)))

=============|||
Junct Tokens as Higher-Level Parameters (TSTLA#GH96)
=============|||

---- MODULE Test ----
op == op(/\, x, /\)
op == op(∧, x, ∧)
op == op(\/, x, \/)
op == op(∨, x, ∨)
====

(source_file (module (header_line) name: (identifier) (header_line)
  (operator_definition name: (identifier) (def_eq) definition:
    (bound_op name: (identifier_ref)
      parameter: (infix_op_symbol (land))
      parameter: (identifier_ref)
      parameter: (infix_op_symbol (land))
    )
  )
  (operator_definition name: (identifier) (def_eq) definition:
    (bound_op name: (identifier_ref)
      parameter: (infix_op_symbol (land))
      parameter: (identifier_ref)
      parameter: (infix_op_symbol (land))
    )
  )
  (operator_definition name: (identifier) (def_eq) definition:
    (bound_op name: (identifier_ref)
      parameter: (infix_op_symbol (lor))
      parameter: (identifier_ref)
      parameter: (infix_op_symbol (lor))
    )
  )
  (operator_definition name: (identifier) (def_eq) definition:
    (bound_op name: (identifier_ref)
      parameter: (infix_op_symbol (lor))
      parameter: (identifier_ref)
      parameter: (infix_op_symbol (lor))
    )
  )
(double_line)))

=============|||
Nonfix Double Exclamation Operator (TSTLA#97)
=============|||

---- MODULE Test ----
op == A!!!(1,2)
op == A !! B
====

--------------|||

(source_file (module (header_line) name: (identifier) (header_line)
  (operator_definition name: (identifier) (def_eq) definition:
    (prefixed_op prefix: (subexpr_prefix (subexpr_component (identifier_ref))) op:
      (bound_nonfix_op symbol: (infix_op_symbol (excl)) (nat_number) (nat_number)))
  )
  (operator_definition name: (identifier) (def_eq) definition:
    (bound_infix_op lhs: (identifier_ref) symbol: (excl) rhs: (identifier_ref))
(double_line)))

